# PyGnuplot

./: .gitignore  PyGnuplot.py  pyproject.toml
tests/: test_functional.py
